# Sid

./: Cargo.toml  README.md
examples/: query.fa  ref.fa
src/: main.rs
