[package]
name = "Sid"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
hashbrown = "0.14"
nohash-hasher = "0.2"
num_cpus = "1.16"
rand = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = 0
incremental = false
overflow-checks = false
rpath = false
